// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should match results: test-files/config/cjs-config/file.html config 1`] = `
{
  "extends": [],
  "plugins": [],
  "root": true,
  "rules": {
    "area-alt": [
      "error",
      {
        "accessible": true,
      },
    ],
    "aria-hidden-body": "error",
    "aria-label-misuse": [
      "error",
      {
        "allowAnyNamable": false,
      },
    ],
    "attr-case": "error",
    "attr-delimiter": "error",
    "attr-quotes": "error",
    "attr-spacing": "error",
    "attribute-allowed-values": "error",
    "attribute-boolean-style": "error",
    "attribute-empty-style": "error",
    "attribute-misuse": "error",
    "close-attr": "error",
    "close-order": "error",
    "deprecated": "error",
    "deprecated-rule": "warn",
    "doctype-html": "error",
    "doctype-style": "error",
    "element-case": "error",
    "element-name": "error",
    "element-permitted-content": "error",
    "element-permitted-occurrences": "error",
    "element-permitted-order": "error",
    "element-permitted-parent": "error",
    "element-required-ancestor": "error",
    "element-required-attributes": "error",
    "element-required-content": "error",
    "empty-heading": "error",
    "empty-title": "error",
    "form-dup-name": "error",
    "hidden-focusable": "error",
    "input-attributes": "error",
    "long-title": "error",
    "map-dup-name": "error",
    "map-id-name": "error",
    "meta-refresh": "error",
    "multiple-labeled-controls": "error",
    "no-abstract-role": "error",
    "no-autoplay": [
      "error",
      {
        "include": [
          "audio",
          "video",
        ],
      },
    ],
    "no-conditional-comment": "error",
    "no-deprecated-attr": "error",
    "no-dup-attr": "error",
    "no-dup-class": "error",
    "no-dup-id": "error",
    "no-implicit-button-type": "error",
    "no-implicit-close": "error",
    "no-implicit-input-type": "error",
    "no-inline-style": "error",
    "no-multiple-main": "error",
    "no-raw-characters": "error",
    "no-redundant-aria-label": "error",
    "no-redundant-for": "error",
    "no-redundant-role": "error",
    "no-self-closing": "error",
    "no-trailing-whitespace": "error",
    "no-unused-disable": "error",
    "no-utf8-bom": "error",
    "prefer-button": "error",
    "prefer-native-element": "error",
    "prefer-tbody": "error",
    "script-element": "error",
    "script-type": "error",
    "svg-focusable": "off",
    "tel-non-breaking": "error",
    "text-content": "error",
    "unique-landmark": "error",
    "unrecognized-char-ref": "error",
    "valid-autocomplete": "error",
    "valid-for": "error",
    "valid-id": [
      "error",
      {
        "relaxed": false,
      },
    ],
    "void": "off",
    "void-content": "off",
    "void-style": "error",
    "wcag/h30": "error",
    "wcag/h32": "error",
    "wcag/h36": "error",
    "wcag/h37": "error",
    "wcag/h63": "error",
    "wcag/h67": "error",
    "wcag/h71": "error",
  },
  "transform": {},
}
`;

exports[`should match results: test-files/config/cjs-config/file.html result 1`] = `
{
  "errorCount": 0,
  "results": [],
  "valid": true,
  "warningCount": 0,
}
`;

exports[`should match results: test-files/config/directive/disable.html config 1`] = `
{
  "extends": [],
  "plugins": [],
  "root": true,
  "rules": {
    "area-alt": [
      "error",
      {
        "accessible": true,
      },
    ],
    "aria-hidden-body": "error",
    "aria-label-misuse": [
      "error",
      {
        "allowAnyNamable": false,
      },
    ],
    "attr-case": "error",
    "attr-delimiter": "error",
    "attr-quotes": "error",
    "attr-spacing": "error",
    "attribute-allowed-values": "error",
    "attribute-boolean-style": "error",
    "attribute-empty-style": "error",
    "attribute-misuse": "error",
    "close-attr": "error",
    "close-order": "error",
    "deprecated": "error",
    "deprecated-rule": "warn",
    "doctype-html": "error",
    "doctype-style": "error",
    "element-case": "error",
    "element-name": "error",
    "element-permitted-content": "off",
    "element-permitted-occurrences": "error",
    "element-permitted-order": "error",
    "element-permitted-parent": "error",
    "element-required-ancestor": "error",
    "element-required-attributes": "error",
    "element-required-content": "error",
    "empty-heading": "error",
    "empty-title": "error",
    "form-dup-name": "error",
    "hidden-focusable": "error",
    "input-attributes": "error",
    "long-title": "error",
    "map-dup-name": "error",
    "map-id-name": "error",
    "meta-refresh": "error",
    "multiple-labeled-controls": "error",
    "no-abstract-role": "error",
    "no-autoplay": [
      "error",
      {
        "include": [
          "audio",
          "video",
        ],
      },
    ],
    "no-conditional-comment": "error",
    "no-deprecated-attr": "error",
    "no-dup-attr": "error",
    "no-dup-class": "error",
    "no-dup-id": "error",
    "no-implicit-button-type": "error",
    "no-implicit-close": "error",
    "no-implicit-input-type": "error",
    "no-inline-style": "error",
    "no-multiple-main": "error",
    "no-raw-characters": "error",
    "no-redundant-aria-label": "error",
    "no-redundant-for": "error",
    "no-redundant-role": "error",
    "no-self-closing": "error",
    "no-trailing-whitespace": "error",
    "no-unused-disable": "off",
    "no-utf8-bom": "error",
    "prefer-button": "error",
    "prefer-native-element": "error",
    "prefer-tbody": "error",
    "script-element": "error",
    "script-type": "error",
    "svg-focusable": "off",
    "tel-non-breaking": "error",
    "text-content": "error",
    "unique-landmark": "error",
    "unrecognized-char-ref": "error",
    "valid-autocomplete": "error",
    "valid-for": "error",
    "valid-id": [
      "error",
      {
        "relaxed": false,
      },
    ],
    "void": "off",
    "void-content": "error",
    "void-style": "error",
    "wcag/h30": "error",
    "wcag/h32": "error",
    "wcag/h36": "error",
    "wcag/h37": "error",
    "wcag/h63": "error",
    "wcag/h67": "error",
    "wcag/h71": "error",
  },
  "transform": {},
}
`;

exports[`should match results: test-files/config/directive/disable.html result 1`] = `
{
  "errorCount": 2,
  "results": [
    {
      "errorCount": 2,
      "filePath": "test-files/config/directive/disable.html",
      "messages": [
        {
          "column": 3,
          "context": "i",
          "line": 1,
          "message": "<i> must not be self-closed",
          "offset": 2,
          "ruleId": "no-self-closing",
          "ruleUrl": "https://html-validate.org/rules/no-self-closing.html",
          "selector": "i:nth-child(1)",
          "severity": 2,
          "size": 2,
        },
        {
          "column": 3,
          "context": "i",
          "line": 8,
          "message": "<i> must not be self-closed",
          "offset": 212,
          "ruleId": "no-self-closing",
          "ruleUrl": "https://html-validate.org/rules/no-self-closing.html",
          "selector": "i:nth-child(4)",
          "severity": 2,
          "size": 2,
        },
      ],
      "source": "<i/>Before disable, should trigger

<!-- [html-validate-disable no-self-closing] -->
<i/>After disable, should not trigger
<i/>After disable, should not trigger

<!-- [html-validate-enable no-self-closing] -->
<i/>Before after, should trigger
",
      "warningCount": 0,
    },
  ],
  "valid": false,
  "warningCount": 0,
}
`;

exports[`should match results: test-files/config/directive/disable-block.html config 1`] = `
{
  "extends": [],
  "plugins": [],
  "root": true,
  "rules": {
    "area-alt": [
      "error",
      {
        "accessible": true,
      },
    ],
    "aria-hidden-body": "error",
    "aria-label-misuse": [
      "error",
      {
        "allowAnyNamable": false,
      },
    ],
    "attr-case": "error",
    "attr-delimiter": "error",
    "attr-quotes": "error",
    "attr-spacing": "error",
    "attribute-allowed-values": "error",
    "attribute-boolean-style": "error",
    "attribute-empty-style": "error",
    "attribute-misuse": "error",
    "close-attr": "error",
    "close-order": "error",
    "deprecated": "error",
    "deprecated-rule": "warn",
    "doctype-html": "error",
    "doctype-style": "error",
    "element-case": "error",
    "element-name": "error",
    "element-permitted-content": "off",
    "element-permitted-occurrences": "error",
    "element-permitted-order": "error",
    "element-permitted-parent": "error",
    "element-required-ancestor": "error",
    "element-required-attributes": "error",
    "element-required-content": "error",
    "empty-heading": "error",
    "empty-title": "error",
    "form-dup-name": "error",
    "hidden-focusable": "error",
    "input-attributes": "error",
    "long-title": "error",
    "map-dup-name": "error",
    "map-id-name": "error",
    "meta-refresh": "error",
    "multiple-labeled-controls": "error",
    "no-abstract-role": "error",
    "no-autoplay": [
      "error",
      {
        "include": [
          "audio",
          "video",
        ],
      },
    ],
    "no-conditional-comment": "error",
    "no-deprecated-attr": "error",
    "no-dup-attr": "error",
    "no-dup-class": "error",
    "no-dup-id": "error",
    "no-implicit-button-type": "error",
    "no-implicit-close": "error",
    "no-implicit-input-type": "error",
    "no-inline-style": "error",
    "no-multiple-main": "error",
    "no-raw-characters": "error",
    "no-redundant-aria-label": "error",
    "no-redundant-for": "error",
    "no-redundant-role": "error",
    "no-self-closing": "error",
    "no-trailing-whitespace": "error",
    "no-unused-disable": "off",
    "no-utf8-bom": "error",
    "prefer-button": "error",
    "prefer-native-element": "error",
    "prefer-tbody": "error",
    "script-element": "error",
    "script-type": "error",
    "svg-focusable": "off",
    "tel-non-breaking": "error",
    "text-content": "error",
    "unique-landmark": "error",
    "unrecognized-char-ref": "error",
    "valid-autocomplete": "error",
    "valid-for": "error",
    "valid-id": [
      "error",
      {
        "relaxed": false,
      },
    ],
    "void": "off",
    "void-content": "error",
    "void-style": "error",
    "wcag/h30": "error",
    "wcag/h32": "error",
    "wcag/h36": "error",
    "wcag/h37": "error",
    "wcag/h63": "error",
    "wcag/h67": "error",
    "wcag/h71": "error",
  },
  "transform": {},
}
`;

exports[`should match results: test-files/config/directive/disable-block.html result 1`] = `
{
  "errorCount": 4,
  "results": [
    {
      "errorCount": 4,
      "filePath": "test-files/config/directive/disable-block.html",
      "messages": [
        {
          "column": 3,
          "context": "i",
          "line": 1,
          "message": "<i> must not be self-closed",
          "offset": 2,
          "ruleId": "no-self-closing",
          "ruleUrl": "https://html-validate.org/rules/no-self-closing.html",
          "selector": "i:nth-child(1)",
          "severity": 2,
          "size": 2,
        },
        {
          "column": 4,
          "context": "i",
          "line": 3,
          "message": "<i> must not be self-closed",
          "offset": 43,
          "ruleId": "no-self-closing",
          "ruleUrl": "https://html-validate.org/rules/no-self-closing.html",
          "selector": "div:nth-child(2) > i:nth-child(1)",
          "severity": 2,
          "size": 2,
        },
        {
          "column": 3,
          "context": "i",
          "line": 11,
          "message": "<i> must not be self-closed",
          "offset": 335,
          "ruleId": "no-self-closing",
          "ruleUrl": "https://html-validate.org/rules/no-self-closing.html",
          "selector": "i:nth-child(3)",
          "severity": 2,
          "size": 2,
        },
        {
          "column": 3,
          "context": "i",
          "line": 16,
          "message": "<i> must not be self-closed",
          "offset": 439,
          "ruleId": "no-self-closing",
          "ruleUrl": "https://html-validate.org/rules/no-self-closing.html",
          "selector": "i:nth-child(5)",
          "severity": 2,
          "size": 2,
        },
      ],
      "source": "<i/>Outside block, should trigger
<div>
	<i/>Inside block, before directive, should trigger
	<!-- [html-validate-disable-block no-self-closing] -->
	<i/>Inside block, after directive, shout not trigger
	<div>
		<i/>Inside block, after directive, shout not trigger
	</div>
	<i/>Inside block, after directive, shout not trigger
</div>
<i/>Outside block, should trigger

<div>
	<!-- [html-validate-disable-block no-self-closing] -->
</div>
<i/>Outside block, should trigger

<!-- [html-validate-disable-block no-self-closing] -->
Should handle when root element is parent but no children
",
      "warningCount": 0,
    },
  ],
  "valid": false,
  "warningCount": 0,
}
`;

exports[`should match results: test-files/config/directive/disable-multiple.html config 1`] = `
{
  "extends": [],
  "plugins": [],
  "root": true,
  "rules": {
    "area-alt": [
      "error",
      {
        "accessible": true,
      },
    ],
    "aria-hidden-body": "error",
    "aria-label-misuse": [
      "error",
      {
        "allowAnyNamable": false,
      },
    ],
    "attr-case": "error",
    "attr-delimiter": "error",
    "attr-quotes": "error",
    "attr-spacing": "error",
    "attribute-allowed-values": "error",
    "attribute-boolean-style": "error",
    "attribute-empty-style": "error",
    "attribute-misuse": "error",
    "close-attr": "error",
    "close-order": "error",
    "deprecated": "error",
    "deprecated-rule": "warn",
    "doctype-html": "error",
    "doctype-style": "error",
    "element-case": "error",
    "element-name": "error",
    "element-permitted-content": "off",
    "element-permitted-occurrences": "error",
    "element-permitted-order": "error",
    "element-permitted-parent": "error",
    "element-required-ancestor": "error",
    "element-required-attributes": "error",
    "element-required-content": "error",
    "empty-heading": "error",
    "empty-title": "error",
    "form-dup-name": "error",
    "hidden-focusable": "error",
    "input-attributes": "error",
    "long-title": "error",
    "map-dup-name": "error",
    "map-id-name": "error",
    "meta-refresh": "error",
    "multiple-labeled-controls": "error",
    "no-abstract-role": "error",
    "no-autoplay": [
      "error",
      {
        "include": [
          "audio",
          "video",
        ],
      },
    ],
    "no-conditional-comment": "error",
    "no-deprecated-attr": "error",
    "no-dup-attr": "error",
    "no-dup-class": "error",
    "no-dup-id": "error",
    "no-implicit-button-type": "error",
    "no-implicit-close": "error",
    "no-implicit-input-type": "error",
    "no-inline-style": "error",
    "no-multiple-main": "error",
    "no-raw-characters": "error",
    "no-redundant-aria-label": "error",
    "no-redundant-for": "error",
    "no-redundant-role": "error",
    "no-self-closing": "error",
    "no-trailing-whitespace": "error",
    "no-unused-disable": "off",
    "no-utf8-bom": "error",
    "prefer-button": "error",
    "prefer-native-element": "error",
    "prefer-tbody": "error",
    "script-element": "error",
    "script-type": "error",
    "svg-focusable": "off",
    "tel-non-breaking": "error",
    "text-content": "error",
    "unique-landmark": "error",
    "unrecognized-char-ref": "error",
    "valid-autocomplete": "error",
    "valid-for": "error",
    "valid-id": [
      "error",
      {
        "relaxed": false,
      },
    ],
    "void": "off",
    "void-content": "error",
    "void-style": "error",
    "wcag/h30": "error",
    "wcag/h32": "error",
    "wcag/h36": "error",
    "wcag/h37": "error",
    "wcag/h63": "error",
    "wcag/h67": "error",
    "wcag/h71": "error",
  },
  "transform": {},
}
`;

exports[`should match results: test-files/config/directive/disable-multiple.html result 1`] = `
{
  "errorCount": 2,
  "results": [
    {
      "errorCount": 2,
      "filePath": "test-files/config/directive/disable-multiple.html",
      "messages": [
        {
          "column": 2,
          "context": {
            "documentation": "\`<blink>\` has no direct replacement and blinking text is frowned upon by accessibility standards.",
            "source": "non-standard",
            "tagName": "blink",
          },
          "line": 1,
          "message": "<blink> is deprecated",
          "offset": 1,
          "ruleId": "deprecated",
          "ruleUrl": "https://html-validate.org/rules/deprecated.html",
          "selector": "blink",
          "severity": 2,
          "size": 5,
        },
        {
          "column": 7,
          "context": "blink",
          "line": 1,
          "message": "<blink> must not be self-closed",
          "offset": 6,
          "ruleId": "no-self-closing",
          "ruleUrl": "https://html-validate.org/rules/no-self-closing.html",
          "selector": "blink",
          "severity": 2,
          "size": 2,
        },
      ],
      "source": "<blink/> Outside block, should trigger

<div>
	<!-- [html-validate-disable-block no-self-closing, deprecated] -->
	<blink/>Inside block, should not trigger
</div>
",
      "warningCount": 0,
    },
  ],
  "valid": false,
  "warningCount": 0,
}
`;

exports[`should match results: test-files/config/directive/disable-next.html config 1`] = `
{
  "extends": [],
  "plugins": [],
  "root": true,
  "rules": {
    "area-alt": [
      "error",
      {
        "accessible": true,
      },
    ],
    "aria-hidden-body": "error",
    "aria-label-misuse": [
      "error",
      {
        "allowAnyNamable": false,
      },
    ],
    "attr-case": "error",
    "attr-delimiter": "error",
    "attr-quotes": "error",
    "attr-spacing": "error",
    "attribute-allowed-values": "error",
    "attribute-boolean-style": "error",
    "attribute-empty-style": "error",
    "attribute-misuse": "error",
    "close-attr": "error",
    "close-order": "error",
    "deprecated": "error",
    "deprecated-rule": "warn",
    "doctype-html": "error",
    "doctype-style": "error",
    "element-case": "error",
    "element-name": "error",
    "element-permitted-content": "off",
    "element-permitted-occurrences": "error",
    "element-permitted-order": "error",
    "element-permitted-parent": "error",
    "element-required-ancestor": "error",
    "element-required-attributes": "error",
    "element-required-content": "error",
    "empty-heading": "error",
    "empty-title": "error",
    "form-dup-name": "error",
    "hidden-focusable": "error",
    "input-attributes": "error",
    "long-title": "error",
    "map-dup-name": "error",
    "map-id-name": "error",
    "meta-refresh": "error",
    "multiple-labeled-controls": "error",
    "no-abstract-role": "error",
    "no-autoplay": [
      "error",
      {
        "include": [
          "audio",
          "video",
        ],
      },
    ],
    "no-conditional-comment": "error",
    "no-deprecated-attr": "error",
    "no-dup-attr": "error",
    "no-dup-class": "error",
    "no-dup-id": "error",
    "no-implicit-button-type": "error",
    "no-implicit-close": "error",
    "no-implicit-input-type": "error",
    "no-inline-style": "error",
    "no-multiple-main": "error",
    "no-raw-characters": "error",
    "no-redundant-aria-label": "error",
    "no-redundant-for": "error",
    "no-redundant-role": "error",
    "no-self-closing": "error",
    "no-trailing-whitespace": "error",
    "no-unused-disable": "off",
    "no-utf8-bom": "error",
    "prefer-button": "error",
    "prefer-native-element": "error",
    "prefer-tbody": "error",
    "script-element": "error",
    "script-type": "error",
    "svg-focusable": "off",
    "tel-non-breaking": "error",
    "text-content": "error",
    "unique-landmark": "error",
    "unrecognized-char-ref": "error",
    "valid-autocomplete": "error",
    "valid-for": "error",
    "valid-id": [
      "error",
      {
        "relaxed": false,
      },
    ],
    "void": "off",
    "void-content": "error",
    "void-style": "error",
    "wcag/h30": "error",
    "wcag/h32": "error",
    "wcag/h36": "error",
    "wcag/h37": "error",
    "wcag/h63": "error",
    "wcag/h67": "error",
    "wcag/h71": "error",
  },
  "transform": {},
}
`;

exports[`should match results: test-files/config/directive/disable-next.html result 1`] = `
{
  "errorCount": 2,
  "results": [
    {
      "errorCount": 2,
      "filePath": "test-files/config/directive/disable-next.html",
      "messages": [
        {
          "column": 3,
          "context": "i",
          "line": 1,
          "message": "<i> must not be self-closed",
          "offset": 2,
          "ruleId": "no-self-closing",
          "ruleUrl": "https://html-validate.org/rules/no-self-closing.html",
          "selector": "i:nth-child(1)",
          "severity": 2,
          "size": 2,
        },
        {
          "column": 3,
          "context": "i",
          "line": 5,
          "message": "<i> must not be self-closed",
          "offset": 136,
          "ruleId": "no-self-closing",
          "ruleUrl": "https://html-validate.org/rules/no-self-closing.html",
          "selector": "i:nth-child(3)",
          "severity": 2,
          "size": 2,
        },
      ],
      "source": "<i/>Before disable, should trigger

<!-- [html-validate-disable-next no-self-closing] -->
<i/>First after disable, should not trigger
<i/>Second after disable, should trigger
",
      "warningCount": 0,
    },
  ],
  "valid": false,
  "warningCount": 0,
}
`;

exports[`should match results: test-files/config/elements/file.html config 1`] = `
{
  "elements": [
    "html5",
    "test-files/config/elements/elements.json",
  ],
  "extends": [],
  "plugins": [],
  "root": true,
  "rules": {
    "area-alt": [
      "error",
      {
        "accessible": true,
      },
    ],
    "aria-hidden-body": "error",
    "aria-label-misuse": [
      "error",
      {
        "allowAnyNamable": false,
      },
    ],
    "attr-case": "error",
    "attr-delimiter": "error",
    "attr-quotes": "error",
    "attr-spacing": "error",
    "attribute-allowed-values": "error",
    "attribute-boolean-style": "error",
    "attribute-empty-style": "error",
    "attribute-misuse": "error",
    "close-attr": "error",
    "close-order": "error",
    "deprecated": "error",
    "deprecated-rule": "warn",
    "doctype-html": "error",
    "doctype-style": "error",
    "element-case": "error",
    "element-name": "error",
    "element-permitted-content": "error",
    "element-permitted-occurrences": "error",
    "element-permitted-order": "error",
    "element-permitted-parent": "error",
    "element-required-ancestor": "error",
    "element-required-attributes": "error",
    "element-required-content": "error",
    "empty-heading": "error",
    "empty-title": "error",
    "form-dup-name": "error",
    "hidden-focusable": "error",
    "input-attributes": "error",
    "long-title": "error",
    "map-dup-name": "error",
    "map-id-name": "error",
    "meta-refresh": "error",
    "multiple-labeled-controls": "error",
    "no-abstract-role": "error",
    "no-autoplay": [
      "error",
      {
        "include": [
          "audio",
          "video",
        ],
      },
    ],
    "no-conditional-comment": "error",
    "no-deprecated-attr": "error",
    "no-dup-attr": "error",
    "no-dup-class": "error",
    "no-dup-id": "error",
    "no-implicit-button-type": "error",
    "no-implicit-close": "error",
    "no-implicit-input-type": "error",
    "no-inline-style": "error",
    "no-multiple-main": "error",
    "no-raw-characters": "error",
    "no-redundant-aria-label": "error",
    "no-redundant-for": "error",
    "no-redundant-role": "error",
    "no-self-closing": "error",
    "no-trailing-whitespace": "error",
    "no-unused-disable": "error",
    "no-utf8-bom": "error",
    "prefer-button": "error",
    "prefer-native-element": "error",
    "prefer-tbody": "error",
    "script-element": "error",
    "script-type": "error",
    "svg-focusable": "off",
    "tel-non-breaking": "error",
    "text-content": "error",
    "unique-landmark": "error",
    "unrecognized-char-ref": "error",
    "valid-autocomplete": "error",
    "valid-for": "error",
    "valid-id": [
      "error",
      {
        "relaxed": false,
      },
    ],
    "void": "off",
    "void-content": "error",
    "void-style": "error",
    "wcag/h30": "error",
    "wcag/h32": "error",
    "wcag/h36": "error",
    "wcag/h37": "error",
    "wcag/h63": "error",
    "wcag/h67": "error",
    "wcag/h71": "error",
  },
  "transform": {},
}
`;

exports[`should match results: test-files/config/elements/file.html result 1`] = `
{
  "errorCount": 2,
  "results": [
    {
      "errorCount": 2,
      "filePath": "test-files/config/elements/file.html",
      "messages": [
        {
          "column": 3,
          "context": {
            "tagName": "deprecated",
          },
          "line": 2,
          "message": "<deprecated> is deprecated",
          "offset": 8,
          "ruleId": "deprecated",
          "ruleUrl": "https://html-validate.org/rules/deprecated.html",
          "selector": "div > deprecated",
          "severity": 2,
          "size": 10,
        },
        {
          "column": 4,
          "context": {
            "child": "<li>",
            "kind": "content",
            "parent": "<ul>",
          },
          "line": 5,
          "message": "<li> element is not permitted as content under <ul>",
          "offset": 67,
          "ruleId": "element-permitted-content",
          "ruleUrl": "https://html-validate.org/rules/element-permitted-content.html",
          "selector": "div > ul > li",
          "severity": 2,
          "size": 2,
        },
      ],
      "source": "<div>
	<deprecated>new (deprecated) element</deprecated>

	<ul>
		<li>overridden so it is disallowed</li>
		<p>overridden so it is allowed</p>
	</ul>
</div>
",
      "warningCount": 0,
    },
  ],
  "valid": false,
  "warningCount": 0,
}
`;

exports[`should match results: test-files/config/extend-order/foo.html config 1`] = `
{
  "elements": [
    "test-files/config/extend-order/first.json",
    "test-files/config/extend-order/override.json",
  ],
  "extends": [],
  "plugins": [],
  "root": true,
  "rules": {
    "element-permitted-content": "error",
  },
  "transform": {},
}
`;

exports[`should match results: test-files/config/extend-order/foo.html result 1`] = `
{
  "errorCount": 1,
  "results": [
    {
      "errorCount": 1,
      "filePath": "test-files/config/extend-order/foo.html",
      "messages": [
        {
          "column": 3,
          "context": {
            "child": "<a>",
            "kind": "content",
            "parent": "<div>",
          },
          "line": 3,
          "message": "<a> element is not permitted as content under <div>",
          "offset": 94,
          "ruleId": "element-permitted-content",
          "ruleUrl": "https://html-validate.org/rules/element-permitted-content.html",
          "selector": "div:nth-child(1) > a",
          "severity": 2,
          "size": 1,
        },
      ],
      "source": "<div>
	<!-- should yield error: allowed in default.json but disallowed by override.json -->
	<a>..</a>
</div>

<div>
	<!-- should not yield error -->
	<b>..</b>
</div>
",
      "warningCount": 0,
    },
  ],
  "valid": false,
  "warningCount": 0,
}
`;

exports[`should match results: test-files/config/extend-order/nested/foo.html config 1`] = `
{
  "elements": [
    "test-files/config/extend-order/first.json",
    "test-files/config/extend-order/override.json",
    "test-files/config/extend-order/nested/nested.json",
  ],
  "extends": [],
  "plugins": [],
  "root": true,
  "rules": {
    "element-permitted-content": "error",
  },
  "transform": {},
}
`;

exports[`should match results: test-files/config/extend-order/nested/foo.html result 1`] = `
{
  "errorCount": 2,
  "results": [
    {
      "errorCount": 2,
      "filePath": "test-files/config/extend-order/nested/foo.html",
      "messages": [
        {
          "column": 3,
          "context": {
            "child": "<a>",
            "kind": "content",
            "parent": "<div>",
          },
          "line": 3,
          "message": "<a> element is not permitted as content under <div>",
          "offset": 70,
          "ruleId": "element-permitted-content",
          "ruleUrl": "https://html-validate.org/rules/element-permitted-content.html",
          "selector": "div:nth-child(1) > a",
          "severity": 2,
          "size": 1,
        },
        {
          "column": 3,
          "context": {
            "child": "<b>",
            "kind": "content",
            "parent": "<div>",
          },
          "line": 4,
          "message": "<b> element is not permitted as content under <div>",
          "offset": 81,
          "ruleId": "element-permitted-content",
          "ruleUrl": "https://html-validate.org/rules/element-permitted-content.html",
          "selector": "div:nth-child(1) > b",
          "severity": 2,
          "size": 1,
        },
      ],
      "source": "<div>
	<!-- should both yield errors: disallowed by nested.json -->
	<a>..</a>
	<b>..</b>
</div>

<div>
	<!-- should not yield error -->
	<c>..</c>
</div>
",
      "warningCount": 0,
    },
  ],
  "valid": false,
  "warningCount": 0,
}
`;

exports[`should match results: test-files/config/file.html config 1`] = `
{
  "extends": [],
  "plugins": [],
  "root": true,
  "rules": {
    "area-alt": [
      "error",
      {
        "accessible": true,
      },
    ],
    "aria-hidden-body": "error",
    "aria-label-misuse": [
      "error",
      {
        "allowAnyNamable": false,
      },
    ],
    "attr-case": "error",
    "attr-delimiter": "error",
    "attr-quotes": "error",
    "attr-spacing": "error",
    "attribute-allowed-values": "error",
    "attribute-boolean-style": "error",
    "attribute-empty-style": "error",
    "attribute-misuse": "error",
    "close-attr": "error",
    "close-order": "error",
    "deprecated": "error",
    "deprecated-rule": "warn",
    "doctype-html": "error",
    "doctype-style": "error",
    "element-case": "error",
    "element-name": "error",
    "element-permitted-content": "error",
    "element-permitted-occurrences": "error",
    "element-permitted-order": "error",
    "element-permitted-parent": "error",
    "element-required-ancestor": "error",
    "element-required-attributes": "error",
    "element-required-content": "error",
    "empty-heading": "error",
    "empty-title": "error",
    "form-dup-name": "error",
    "hidden-focusable": "error",
    "input-attributes": "error",
    "long-title": "error",
    "map-dup-name": "error",
    "map-id-name": "error",
    "meta-refresh": "error",
    "multiple-labeled-controls": "error",
    "no-abstract-role": "error",
    "no-autoplay": [
      "error",
      {
        "include": [
          "audio",
          "video",
        ],
      },
    ],
    "no-conditional-comment": "error",
    "no-deprecated-attr": "error",
    "no-dup-attr": "error",
    "no-dup-class": "error",
    "no-dup-id": "error",
    "no-implicit-button-type": "error",
    "no-implicit-close": "error",
    "no-implicit-input-type": "error",
    "no-inline-style": "error",
    "no-multiple-main": "error",
    "no-raw-characters": "error",
    "no-redundant-aria-label": "error",
    "no-redundant-for": "error",
    "no-redundant-role": "error",
    "no-self-closing": "error",
    "no-trailing-whitespace": "error",
    "no-unused-disable": "error",
    "no-utf8-bom": "error",
    "prefer-button": "error",
    "prefer-native-element": "error",
    "prefer-tbody": "error",
    "script-element": "error",
    "script-type": "error",
    "svg-focusable": "off",
    "tel-non-breaking": "error",
    "text-content": "error",
    "unique-landmark": "error",
    "unrecognized-char-ref": "error",
    "valid-autocomplete": "error",
    "valid-for": "error",
    "valid-id": [
      "error",
      {
        "relaxed": false,
      },
    ],
    "void": "off",
    "void-content": "error",
    "void-style": "error",
    "wcag/h30": "error",
    "wcag/h32": "error",
    "wcag/h36": "error",
    "wcag/h37": "error",
    "wcag/h63": "error",
    "wcag/h67": "error",
    "wcag/h71": "error",
  },
  "transform": {},
}
`;

exports[`should match results: test-files/config/file.html result 1`] = `
{
  "errorCount": 1,
  "results": [
    {
      "errorCount": 1,
      "filePath": "test-files/config/file.html",
      "messages": [
        {
          "column": 6,
          "context": "br",
          "line": 2,
          "message": "End tag for <br> must be omitted",
          "offset": 49,
          "ruleId": "void-content",
          "ruleUrl": "https://html-validate.org/rules/void-content.html",
          "selector": null,
          "severity": 2,
          "size": 3,
        },
      ],
      "source": "<!-- default configuration yields error -->
<br></br>
",
      "warningCount": 0,
    },
  ],
  "valid": false,
  "warningCount": 0,
}
`;

exports[`should match results: test-files/config/js-config/file.html config 1`] = `
{
  "extends": [],
  "plugins": [],
  "root": true,
  "rules": {
    "area-alt": [
      "error",
      {
        "accessible": true,
      },
    ],
    "aria-hidden-body": "error",
    "aria-label-misuse": [
      "error",
      {
        "allowAnyNamable": false,
      },
    ],
    "attr-case": "error",
    "attr-delimiter": "error",
    "attr-quotes": "error",
    "attr-spacing": "error",
    "attribute-allowed-values": "error",
    "attribute-boolean-style": "error",
    "attribute-empty-style": "error",
    "attribute-misuse": "error",
    "close-attr": "error",
    "close-order": "error",
    "deprecated": "error",
    "deprecated-rule": "warn",
    "doctype-html": "error",
    "doctype-style": "error",
    "element-case": "error",
    "element-name": "error",
    "element-permitted-content": "error",
    "element-permitted-occurrences": "error",
    "element-permitted-order": "error",
    "element-permitted-parent": "error",
    "element-required-ancestor": "error",
    "element-required-attributes": "error",
    "element-required-content": "error",
    "empty-heading": "error",
    "empty-title": "error",
    "form-dup-name": "error",
    "hidden-focusable": "error",
    "input-attributes": "error",
    "long-title": "error",
    "map-dup-name": "error",
    "map-id-name": "error",
    "meta-refresh": "error",
    "multiple-labeled-controls": "error",
    "no-abstract-role": "error",
    "no-autoplay": [
      "error",
      {
        "include": [
          "audio",
          "video",
        ],
      },
    ],
    "no-conditional-comment": "error",
    "no-deprecated-attr": "error",
    "no-dup-attr": "error",
    "no-dup-class": "error",
    "no-dup-id": "error",
    "no-implicit-button-type": "error",
    "no-implicit-close": "error",
    "no-implicit-input-type": "error",
    "no-inline-style": "error",
    "no-multiple-main": "error",
    "no-raw-characters": "error",
    "no-redundant-aria-label": "error",
    "no-redundant-for": "error",
    "no-redundant-role": "error",
    "no-self-closing": "error",
    "no-trailing-whitespace": "error",
    "no-unused-disable": "error",
    "no-utf8-bom": "error",
    "prefer-button": "error",
    "prefer-native-element": "error",
    "prefer-tbody": "error",
    "script-element": "error",
    "script-type": "error",
    "svg-focusable": "off",
    "tel-non-breaking": "error",
    "text-content": "error",
    "unique-landmark": "error",
    "unrecognized-char-ref": "error",
    "valid-autocomplete": "error",
    "valid-for": "error",
    "valid-id": [
      "error",
      {
        "relaxed": false,
      },
    ],
    "void": "off",
    "void-content": "off",
    "void-style": "error",
    "wcag/h30": "error",
    "wcag/h32": "error",
    "wcag/h36": "error",
    "wcag/h37": "error",
    "wcag/h63": "error",
    "wcag/h67": "error",
    "wcag/h71": "error",
  },
  "transform": {},
}
`;

exports[`should match results: test-files/config/js-config/file.html result 1`] = `
{
  "errorCount": 0,
  "results": [],
  "valid": true,
  "warningCount": 0,
}
`;

exports[`should match results: test-files/config/missing-transformer/test.html config 1`] = `
{
  "extends": [],
  "plugins": [],
  "root": true,
  "rules": {},
  "transform": {
    "^.*\\.js$": "non-existing",
  },
}
`;

exports[`should match results: test-files/config/missing-transformer/test.html result 1`] = `
{
  "errorCount": 0,
  "results": [],
  "valid": true,
  "warningCount": 0,
}
`;

exports[`should match results: test-files/config/mjs-config/file.html config 1`] = `
{
  "extends": [],
  "plugins": [],
  "root": true,
  "rules": {
    "area-alt": [
      "error",
      {
        "accessible": true,
      },
    ],
    "aria-hidden-body": "error",
    "aria-label-misuse": [
      "error",
      {
        "allowAnyNamable": false,
      },
    ],
    "attr-case": "error",
    "attr-delimiter": "error",
    "attr-quotes": "error",
    "attr-spacing": "error",
    "attribute-allowed-values": "error",
    "attribute-boolean-style": "error",
    "attribute-empty-style": "error",
    "attribute-misuse": "error",
    "close-attr": "error",
    "close-order": "error",
    "deprecated": "error",
    "deprecated-rule": "warn",
    "doctype-html": "error",
    "doctype-style": "error",
    "element-case": "error",
    "element-name": "error",
    "element-permitted-content": "error",
    "element-permitted-occurrences": "error",
    "element-permitted-order": "error",
    "element-permitted-parent": "error",
    "element-required-ancestor": "error",
    "element-required-attributes": "error",
    "element-required-content": "error",
    "empty-heading": "error",
    "empty-title": "error",
    "form-dup-name": "error",
    "hidden-focusable": "error",
    "input-attributes": "error",
    "long-title": "error",
    "map-dup-name": "error",
    "map-id-name": "error",
    "meta-refresh": "error",
    "multiple-labeled-controls": "error",
    "no-abstract-role": "error",
    "no-autoplay": [
      "error",
      {
        "include": [
          "audio",
          "video",
        ],
      },
    ],
    "no-conditional-comment": "error",
    "no-deprecated-attr": "error",
    "no-dup-attr": "error",
    "no-dup-class": "error",
    "no-dup-id": "error",
    "no-implicit-button-type": "error",
    "no-implicit-close": "error",
    "no-implicit-input-type": "error",
    "no-inline-style": "error",
    "no-multiple-main": "error",
    "no-raw-characters": "error",
    "no-redundant-aria-label": "error",
    "no-redundant-for": "error",
    "no-redundant-role": "error",
    "no-self-closing": "error",
    "no-trailing-whitespace": "error",
    "no-unused-disable": "error",
    "no-utf8-bom": "error",
    "prefer-button": "error",
    "prefer-native-element": "error",
    "prefer-tbody": "error",
    "script-element": "error",
    "script-type": "error",
    "svg-focusable": "off",
    "tel-non-breaking": "error",
    "text-content": "error",
    "unique-landmark": "error",
    "unrecognized-char-ref": "error",
    "valid-autocomplete": "error",
    "valid-for": "error",
    "valid-id": [
      "error",
      {
        "relaxed": false,
      },
    ],
    "void": "off",
    "void-content": "off",
    "void-style": "error",
    "wcag/h30": "error",
    "wcag/h32": "error",
    "wcag/h36": "error",
    "wcag/h37": "error",
    "wcag/h63": "error",
    "wcag/h67": "error",
    "wcag/h71": "error",
  },
  "transform": {},
}
`;

exports[`should match results: test-files/config/mjs-config/file.html result 1`] = `
{
  "errorCount": 0,
  "results": [],
  "valid": true,
  "warningCount": 0,
}
`;

exports[`should match results: test-files/config/off/error/file.html config 1`] = `
{
  "extends": [],
  "plugins": [],
  "root": true,
  "rules": {
    "area-alt": [
      "error",
      {
        "accessible": true,
      },
    ],
    "aria-hidden-body": "error",
    "aria-label-misuse": [
      "error",
      {
        "allowAnyNamable": false,
      },
    ],
    "attr-case": "error",
    "attr-delimiter": "error",
    "attr-quotes": "error",
    "attr-spacing": "error",
    "attribute-allowed-values": "error",
    "attribute-boolean-style": "error",
    "attribute-empty-style": "error",
    "attribute-misuse": "error",
    "close-attr": "error",
    "close-order": "error",
    "deprecated": "error",
    "deprecated-rule": "warn",
    "doctype-html": "error",
    "doctype-style": "error",
    "element-case": "error",
    "element-name": "error",
    "element-permitted-content": "error",
    "element-permitted-occurrences": "error",
    "element-permitted-order": "error",
    "element-permitted-parent": "error",
    "element-required-ancestor": "error",
    "element-required-attributes": "error",
    "element-required-content": "error",
    "empty-heading": "error",
    "empty-title": "error",
    "form-dup-name": "error",
    "hidden-focusable": "error",
    "input-attributes": "error",
    "long-title": "error",
    "map-dup-name": "error",
    "map-id-name": "error",
    "meta-refresh": "error",
    "multiple-labeled-controls": "error",
    "no-abstract-role": "error",
    "no-autoplay": [
      "error",
      {
        "include": [
          "audio",
          "video",
        ],
      },
    ],
    "no-conditional-comment": "error",
    "no-deprecated-attr": "error",
    "no-dup-attr": "error",
    "no-dup-class": "error",
    "no-dup-id": "error",
    "no-implicit-button-type": "error",
    "no-implicit-close": "error",
    "no-implicit-input-type": "error",
    "no-inline-style": "error",
    "no-multiple-main": "error",
    "no-raw-characters": "error",
    "no-redundant-aria-label": "error",
    "no-redundant-for": "error",
    "no-redundant-role": "error",
    "no-self-closing": "error",
    "no-trailing-whitespace": "error",
    "no-unused-disable": "error",
    "no-utf8-bom": "error",
    "prefer-button": "error",
    "prefer-native-element": "error",
    "prefer-tbody": "error",
    "script-element": "error",
    "script-type": "error",
    "svg-focusable": "off",
    "tel-non-breaking": "error",
    "text-content": "error",
    "unique-landmark": "error",
    "unrecognized-char-ref": "error",
    "valid-autocomplete": "error",
    "valid-for": "error",
    "valid-id": [
      "error",
      {
        "relaxed": false,
      },
    ],
    "void": "off",
    "void-content": "error",
    "void-style": "error",
    "wcag/h30": "error",
    "wcag/h32": "error",
    "wcag/h36": "error",
    "wcag/h37": "error",
    "wcag/h63": "error",
    "wcag/h67": "error",
    "wcag/h71": "error",
  },
  "transform": {},
}
`;

exports[`should match results: test-files/config/off/error/file.html result 1`] = `
{
  "errorCount": 1,
  "results": [
    {
      "errorCount": 1,
      "filePath": "test-files/config/off/error/file.html",
      "messages": [
        {
          "column": 6,
          "context": "br",
          "line": 2,
          "message": "End tag for <br> must be omitted",
          "offset": 42,
          "ruleId": "void-content",
          "ruleUrl": "https://html-validate.org/rules/void-content.html",
          "selector": null,
          "severity": 2,
          "size": 3,
        },
      ],
      "source": "<!-- reconfigured to yield error -->
<br></br>
",
      "warningCount": 0,
    },
  ],
  "valid": false,
  "warningCount": 0,
}
`;

exports[`should match results: test-files/config/off/file.html config 1`] = `
{
  "extends": [],
  "plugins": [],
  "root": true,
  "rules": {
    "area-alt": [
      "error",
      {
        "accessible": true,
      },
    ],
    "aria-hidden-body": "error",
    "aria-label-misuse": [
      "error",
      {
        "allowAnyNamable": false,
      },
    ],
    "attr-case": "error",
    "attr-delimiter": "error",
    "attr-quotes": "error",
    "attr-spacing": "error",
    "attribute-allowed-values": "error",
    "attribute-boolean-style": "error",
    "attribute-empty-style": "error",
    "attribute-misuse": "error",
    "close-attr": "error",
    "close-order": "error",
    "deprecated": "error",
    "deprecated-rule": "warn",
    "doctype-html": "error",
    "doctype-style": "error",
    "element-case": "error",
    "element-name": "error",
    "element-permitted-content": "error",
    "element-permitted-occurrences": "error",
    "element-permitted-order": "error",
    "element-permitted-parent": "error",
    "element-required-ancestor": "error",
    "element-required-attributes": "error",
    "element-required-content": "error",
    "empty-heading": "error",
    "empty-title": "error",
    "form-dup-name": "error",
    "hidden-focusable": "error",
    "input-attributes": "error",
    "long-title": "error",
    "map-dup-name": "error",
    "map-id-name": "error",
    "meta-refresh": "error",
    "multiple-labeled-controls": "error",
    "no-abstract-role": "error",
    "no-autoplay": [
      "error",
      {
        "include": [
          "audio",
          "video",
        ],
      },
    ],
    "no-conditional-comment": "error",
    "no-deprecated-attr": "error",
    "no-dup-attr": "error",
    "no-dup-class": "error",
    "no-dup-id": "error",
    "no-implicit-button-type": "error",
    "no-implicit-close": "error",
    "no-implicit-input-type": "error",
    "no-inline-style": "error",
    "no-multiple-main": "error",
    "no-raw-characters": "error",
    "no-redundant-aria-label": "error",
    "no-redundant-for": "error",
    "no-redundant-role": "error",
    "no-self-closing": "error",
    "no-trailing-whitespace": "error",
    "no-unused-disable": "error",
    "no-utf8-bom": "error",
    "prefer-button": "error",
    "prefer-native-element": "error",
    "prefer-tbody": "error",
    "script-element": "error",
    "script-type": "error",
    "svg-focusable": "off",
    "tel-non-breaking": "error",
    "text-content": "error",
    "unique-landmark": "error",
    "unrecognized-char-ref": "error",
    "valid-autocomplete": "error",
    "valid-for": "error",
    "valid-id": [
      "error",
      {
        "relaxed": false,
      },
    ],
    "void": "off",
    "void-content": "off",
    "void-style": "error",
    "wcag/h30": "error",
    "wcag/h32": "error",
    "wcag/h36": "error",
    "wcag/h37": "error",
    "wcag/h63": "error",
    "wcag/h67": "error",
    "wcag/h71": "error",
  },
  "transform": {},
}
`;

exports[`should match results: test-files/config/off/file.html result 1`] = `
{
  "errorCount": 0,
  "results": [],
  "valid": true,
  "warningCount": 0,
}
`;

exports[`should match results: test-files/config/warn/file.html config 1`] = `
{
  "extends": [],
  "plugins": [],
  "root": true,
  "rules": {
    "area-alt": [
      "error",
      {
        "accessible": true,
      },
    ],
    "aria-hidden-body": "error",
    "aria-label-misuse": [
      "error",
      {
        "allowAnyNamable": false,
      },
    ],
    "attr-case": "error",
    "attr-delimiter": "error",
    "attr-quotes": "error",
    "attr-spacing": "error",
    "attribute-allowed-values": "error",
    "attribute-boolean-style": "error",
    "attribute-empty-style": "error",
    "attribute-misuse": "error",
    "close-attr": "error",
    "close-order": "error",
    "deprecated": "error",
    "deprecated-rule": "warn",
    "doctype-html": "error",
    "doctype-style": "error",
    "element-case": "error",
    "element-name": "error",
    "element-permitted-content": "error",
    "element-permitted-occurrences": "error",
    "element-permitted-order": "error",
    "element-permitted-parent": "error",
    "element-required-ancestor": "error",
    "element-required-attributes": "error",
    "element-required-content": "error",
    "empty-heading": "error",
    "empty-title": "error",
    "form-dup-name": "error",
    "hidden-focusable": "error",
    "input-attributes": "error",
    "long-title": "error",
    "map-dup-name": "error",
    "map-id-name": "error",
    "meta-refresh": "error",
    "multiple-labeled-controls": "error",
    "no-abstract-role": "error",
    "no-autoplay": [
      "error",
      {
        "include": [
          "audio",
          "video",
        ],
      },
    ],
    "no-conditional-comment": "error",
    "no-deprecated-attr": "error",
    "no-dup-attr": "error",
    "no-dup-class": "error",
    "no-dup-id": "error",
    "no-implicit-button-type": "error",
    "no-implicit-close": "error",
    "no-implicit-input-type": "error",
    "no-inline-style": "error",
    "no-multiple-main": "error",
    "no-raw-characters": "error",
    "no-redundant-aria-label": "error",
    "no-redundant-for": "error",
    "no-redundant-role": "error",
    "no-self-closing": "error",
    "no-trailing-whitespace": "error",
    "no-unused-disable": "error",
    "no-utf8-bom": "error",
    "prefer-button": "error",
    "prefer-native-element": "error",
    "prefer-tbody": "error",
    "script-element": "error",
    "script-type": "error",
    "svg-focusable": "off",
    "tel-non-breaking": "error",
    "text-content": "error",
    "unique-landmark": "error",
    "unrecognized-char-ref": "error",
    "valid-autocomplete": "error",
    "valid-for": "error",
    "valid-id": [
      "error",
      {
        "relaxed": false,
      },
    ],
    "void": "off",
    "void-content": "warn",
    "void-style": "error",
    "wcag/h30": "error",
    "wcag/h32": "error",
    "wcag/h36": "error",
    "wcag/h37": "error",
    "wcag/h63": "error",
    "wcag/h67": "error",
    "wcag/h71": "error",
  },
  "transform": {},
}
`;

exports[`should match results: test-files/config/warn/file.html result 1`] = `
{
  "errorCount": 0,
  "results": [
    {
      "errorCount": 0,
      "filePath": "test-files/config/warn/file.html",
      "messages": [
        {
          "column": 6,
          "context": "br",
          "line": 2,
          "message": "End tag for <br> must be omitted",
          "offset": 44,
          "ruleId": "void-content",
          "ruleUrl": "https://html-validate.org/rules/void-content.html",
          "selector": null,
          "severity": 1,
          "size": 3,
        },
      ],
      "source": "<!-- configured to yield a warning -->
<br></br>
",
      "warningCount": 1,
    },
  ],
  "valid": true,
  "warningCount": 1,
}
`;
